# platform.upstream.signonui-efl

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  com.google.code.AccountsSSO.gSingleSignOnUI.service.in  singlesignonui-dialog.xml  singlesignonui.xml
dists/rpm/: signonui-efl.changes
packaging/: signonui-efl.changes  signonui-efl.spec
src/: Makefile.am  sso-ui-dialog.c  sso-ui-dialog.h  sso-ui.c
tests/: Makefile.am  README.tests  run-unit-tests
tools/: Makefile.am  cancel-ui-request  query-dialog  refresh-dialog
